fix navigation on mobile screen

--- a/src/assets/scss/base/_form.scss
+++ b/src/assets/scss/base/_form.scss
@@ -70,6 +70,7 @@ input[type='number']::-webkit-outer-spin-button {
         font-size: 0.875rem !important;
         text-transform: none;
         font-family: $font_regular;
+
         &:after {
             background-color: transparent !important;
             color: $secondary;
@@ -78,6 +79,11 @@ input[type='number']::-webkit-outer-spin-button {
             border: none !important;
             text-transform: uppercase;
             font-family: $font_medium;
+
+            @include mobile {
+                font-size: 12px !important;
+                top: 7px;
+            }
         }
     }
 }
